# Tiller

./: .gitignore  AGENTS.md  README.md  agents.json  pyproject.toml  tiller.example.yaml
installers/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh
src/tiller/: __main__.py  cli.py  commands.py  config.py  github.py  models.py  operations.py  pr_providers.py  repo_seed.py  runtime.py  service.py  session.py  setup.py  setup_clickup.py  setup_prompts.py  setup_registry.py  setup_telegram.py  setup_types.py  task_runtime.py  templates.py
src/tiller/agents/: __init__.py  aichat.py  aider.py  amp.py  auggie.py  autohand.py  base.py  charm.py  claude.py  cline.py  cloudflare_agents.py  codebuff.py  codex.py  cody.py  common.py  composio.py  continue_dev.py  copilot.py  cursor.py  devin_terminal.py  droid.py  factory.py  forge.py  gemini.py  goose.py  gptme.py  hermes.py  iac.py  junie.py  kilo.py  kimi.py  kiro.py  letta_code.py  mistral.py  ollama.py  open_interpreter.py  openai_agents.py  opencode.py  openhands.py  pi.py  (+5 more)
src/tiller/mcp/: __init__.py  config.py  server.py
src/tiller/memory/: __init__.py  provider.py  service.py
src/tiller/trackers/: __init__.py  base.py  clickup.py  factory.py  stubs.py  sync_base.py  sync_clickup.py  sync_factory.py  telegram.py
src/tiller/workspace/: __init__.py  models.py  repository.py
tests/: test_service.py
