[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiller"
version = "0.1.0"
description = "Minimal tracker-driven harness for autonomous coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "httpx>=0.27.0",
  "mcp>=1.9.0",
  "questionary>=2.0.1",
  "textual>=8.2.6",
]

[project.optional-dependencies]
memory-hindsight = [
  "hindsight-all>=0.1.0",
]
memory-langmem = [
  "langmem>=0.0.29",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
tiller = "tiller.cli:main"
tiller-mcp = "tiller.mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
